--- a/university-app/days/day03/src/app/university-table/university-table.component.html
+++ b/university-app/days/day03/src/app/university-table/university-table.component.html
@@ -3,7 +3,10 @@
     <tr>
       <th>Dettaglio</th>
       <th>Nome</th>
-      <th>Stato</th>
+      <th>Country</th>
+      <th>Stato/Provincia</th>
+      <th>Alpha Two Code</th>
+      <th>Website</th>
     </tr>
   </thead>
   <tbody>
@@ -12,6 +15,9 @@
         <td><a href="#">Più informazioni</a></td>
         <td>{{university.name}}</td>
         <td>{{university.country}}</td>
+        <td>{{university["state-province"]}}</td>
+        <td>{{university.alpha_two_code}}</td>
+        <td>{{university.web_pages}}</td>
       </tr>
     </ng-container>
     <tr *ngIf="!universities || !universities.length">
